src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    NEWLINE
    WHITESPACE

Grammar

Rule 0     S' -> prog
Rule 1     prog -> decl_list stmt_list
Rule 2     decl_list -> empty
Rule 3     decl_list -> decl decl_list
Rule 4     empty -> <empty>
Rule 5     decl -> type var_list S
Rule 6     stmt_list -> stmt stmt_list
Rule 7     stmt_list -> stmt
Rule 8     stmt -> if_stmt
Rule 9     stmt -> while_stmt
Rule 10    stmt -> block_stmt
Rule 11    stmt -> print_stmt
Rule 12    stmt -> assignment
Rule 13    if_stmt -> IF RO exp RC stmt else_stmt
Rule 14    else_stmt -> ELSE stmt
Rule 15    else_stmt -> empty
Rule 16    while_stmt -> WHILE RO exp RC stmt
Rule 17    print_stmt -> PRINT exp S
Rule 18    block_stmt -> BO stmt_list BC
Rule 19    assignment -> id EQ exp S
Rule 20    type -> INT_TYPE
Rule 21    type -> DOUBLE_TYPE
Rule 22    var_list -> var
Rule 23    var_list -> var CM var_list
Rule 24    var -> ID array
Rule 25    array -> empty
Rule 26    array -> SO INT SC array
Rule 27    id_array -> SO INT SC id_array
Rule 28    id_array -> SO id SC id_array
Rule 29    id_array -> empty
Rule 30    id -> ID
Rule 31    id -> ID id_array
Rule 32    exp -> RO exp RC
Rule 33    exp -> condition
Rule 34    exp -> arigmethic
Rule 35    exp -> number_id
Rule 36    exp -> unumber_id
Rule 37    condition -> NOT exp
Rule 38    condition -> exp OR exp
Rule 39    condition -> exp AND exp
Rule 40    condition -> exp MIN exp
Rule 41    condition -> exp MAJ exp
Rule 42    condition -> exp EQ EQ exp
Rule 43    condition -> exp MAJ_EQ exp
Rule 44    condition -> exp MIN_EQ exp
Rule 45    arigmethic -> exp PLUS exp
Rule 46    arigmethic -> exp MINUS exp
Rule 47    arigmethic -> exp STAR exp
Rule 48    arigmethic -> exp DIV exp
Rule 49    number_id -> id
Rule 50    number_id -> INT
Rule 51    number_id -> DOUBLE
Rule 52    unumber_id -> UMINUS
Rule 53    unumber_id -> exp UMINUS
Rule 54    unumber_id -> MINUS exp

Terminals, with rules where they appear

AND                  : 39
BC                   : 18
BO                   : 18
CM                   : 23
COMMENT              : 
DIV                  : 48
DOUBLE               : 51
DOUBLE_TYPE          : 21
ELSE                 : 14
EQ                   : 19 42 42
ID                   : 24 30 31
IF                   : 13
INT                  : 26 27 50
INT_TYPE             : 20
MAJ                  : 41
MAJ_EQ               : 43
MIN                  : 40
MINUS                : 46 54
MIN_EQ               : 44
NEWLINE              : 
NOT                  : 37
OR                   : 38
PLUS                 : 45
PRINT                : 17
RC                   : 13 16 32
RO                   : 13 16 32
S                    : 5 17 19
SC                   : 26 27 28
SO                   : 26 27 28
STAR                 : 47
UMINUS               : 52 53
WHILE                : 16
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

arigmethic           : 34
array                : 24 26
assignment           : 12
block_stmt           : 10
condition            : 33
decl                 : 3
decl_list            : 1 3
else_stmt            : 13
empty                : 2 15 25 29
exp                  : 13 16 17 19 32 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 53 54
id                   : 19 28 49
id_array             : 27 28 31
if_stmt              : 8
number_id            : 35
print_stmt           : 11
prog                 : 0
stmt                 : 6 7 13 14 16
stmt_list            : 1 6 18
type                 : 5
unumber_id           : 36
var                  : 22 23
var_list             : 5 23
while_stmt           : 9

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . decl_list stmt_list
    (2) decl_list -> . empty
    (3) decl_list -> . decl decl_list
    (4) empty -> .
    (5) decl -> . type var_list S
    (20) type -> . INT_TYPE
    (21) type -> . DOUBLE_TYPE

    IF              reduce using rule 4 (empty -> .)
    WHILE           reduce using rule 4 (empty -> .)
    BO              reduce using rule 4 (empty -> .)
    PRINT           reduce using rule 4 (empty -> .)
    ID              reduce using rule 4 (empty -> .)
    INT_TYPE        shift and go to state 6
    DOUBLE_TYPE     shift and go to state 7

    prog                           shift and go to state 1
    decl_list                      shift and go to state 2
    empty                          shift and go to state 3
    decl                           shift and go to state 4
    type                           shift and go to state 5

state 1

    (0) S' -> prog .



state 2

    (1) prog -> decl_list . stmt_list
    (6) stmt_list -> . stmt stmt_list
    (7) stmt_list -> . stmt
    (8) stmt -> . if_stmt
    (9) stmt -> . while_stmt
    (10) stmt -> . block_stmt
    (11) stmt -> . print_stmt
    (12) stmt -> . assignment
    (13) if_stmt -> . IF RO exp RC stmt else_stmt
    (16) while_stmt -> . WHILE RO exp RC stmt
    (18) block_stmt -> . BO stmt_list BC
    (17) print_stmt -> . PRINT exp S
    (19) assignment -> . id EQ exp S
    (30) id -> . ID
    (31) id -> . ID id_array

    IF              shift and go to state 15
    WHILE           shift and go to state 16
    BO              shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 20

    stmt_list                      shift and go to state 8
    stmt                           shift and go to state 9
    if_stmt                        shift and go to state 10
    while_stmt                     shift and go to state 11
    block_stmt                     shift and go to state 12
    print_stmt                     shift and go to state 13
    assignment                     shift and go to state 14
    id                             shift and go to state 19

state 3

    (2) decl_list -> empty .

    IF              reduce using rule 2 (decl_list -> empty .)
    WHILE           reduce using rule 2 (decl_list -> empty .)
    BO              reduce using rule 2 (decl_list -> empty .)
    PRINT           reduce using rule 2 (decl_list -> empty .)
    ID              reduce using rule 2 (decl_list -> empty .)


state 4

    (3) decl_list -> decl . decl_list
    (2) decl_list -> . empty
    (3) decl_list -> . decl decl_list
    (4) empty -> .
    (5) decl -> . type var_list S
    (20) type -> . INT_TYPE
    (21) type -> . DOUBLE_TYPE

    IF              reduce using rule 4 (empty -> .)
    WHILE           reduce using rule 4 (empty -> .)
    BO              reduce using rule 4 (empty -> .)
    PRINT           reduce using rule 4 (empty -> .)
    ID              reduce using rule 4 (empty -> .)
    INT_TYPE        shift and go to state 6
    DOUBLE_TYPE     shift and go to state 7

    decl                           shift and go to state 4
    decl_list                      shift and go to state 21
    empty                          shift and go to state 3
    type                           shift and go to state 5

state 5

    (5) decl -> type . var_list S
    (22) var_list -> . var
    (23) var_list -> . var CM var_list
    (24) var -> . ID array

    ID              shift and go to state 24

    var_list                       shift and go to state 22
    var                            shift and go to state 23

state 6

    (20) type -> INT_TYPE .

    ID              reduce using rule 20 (type -> INT_TYPE .)


state 7

    (21) type -> DOUBLE_TYPE .

    ID              reduce using rule 21 (type -> DOUBLE_TYPE .)


state 8

    (1) prog -> decl_list stmt_list .

    $end            reduce using rule 1 (prog -> decl_list stmt_list .)


state 9

    (6) stmt_list -> stmt . stmt_list
    (7) stmt_list -> stmt .
    (6) stmt_list -> . stmt stmt_list
    (7) stmt_list -> . stmt
    (8) stmt -> . if_stmt
    (9) stmt -> . while_stmt
    (10) stmt -> . block_stmt
    (11) stmt -> . print_stmt
    (12) stmt -> . assignment
    (13) if_stmt -> . IF RO exp RC stmt else_stmt
    (16) while_stmt -> . WHILE RO exp RC stmt
    (18) block_stmt -> . BO stmt_list BC
    (17) print_stmt -> . PRINT exp S
    (19) assignment -> . id EQ exp S
    (30) id -> . ID
    (31) id -> . ID id_array

    $end            reduce using rule 7 (stmt_list -> stmt .)
    BC              reduce using rule 7 (stmt_list -> stmt .)
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    BO              shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 20

    stmt                           shift and go to state 9
    stmt_list                      shift and go to state 25
    if_stmt                        shift and go to state 10
    while_stmt                     shift and go to state 11
    block_stmt                     shift and go to state 12
    print_stmt                     shift and go to state 13
    assignment                     shift and go to state 14
    id                             shift and go to state 19

state 10

    (8) stmt -> if_stmt .

    IF              reduce using rule 8 (stmt -> if_stmt .)
    WHILE           reduce using rule 8 (stmt -> if_stmt .)
    BO              reduce using rule 8 (stmt -> if_stmt .)
    PRINT           reduce using rule 8 (stmt -> if_stmt .)
    ID              reduce using rule 8 (stmt -> if_stmt .)
    $end            reduce using rule 8 (stmt -> if_stmt .)
    BC              reduce using rule 8 (stmt -> if_stmt .)
    ELSE            reduce using rule 8 (stmt -> if_stmt .)


state 11

    (9) stmt -> while_stmt .

    IF              reduce using rule 9 (stmt -> while_stmt .)
    WHILE           reduce using rule 9 (stmt -> while_stmt .)
    BO              reduce using rule 9 (stmt -> while_stmt .)
    PRINT           reduce using rule 9 (stmt -> while_stmt .)
    ID              reduce using rule 9 (stmt -> while_stmt .)
    $end            reduce using rule 9 (stmt -> while_stmt .)
    BC              reduce using rule 9 (stmt -> while_stmt .)
    ELSE            reduce using rule 9 (stmt -> while_stmt .)


state 12

    (10) stmt -> block_stmt .

    IF              reduce using rule 10 (stmt -> block_stmt .)
    WHILE           reduce using rule 10 (stmt -> block_stmt .)
    BO              reduce using rule 10 (stmt -> block_stmt .)
    PRINT           reduce using rule 10 (stmt -> block_stmt .)
    ID              reduce using rule 10 (stmt -> block_stmt .)
    $end            reduce using rule 10 (stmt -> block_stmt .)
    BC              reduce using rule 10 (stmt -> block_stmt .)
    ELSE            reduce using rule 10 (stmt -> block_stmt .)


state 13

    (11) stmt -> print_stmt .

    IF              reduce using rule 11 (stmt -> print_stmt .)
    WHILE           reduce using rule 11 (stmt -> print_stmt .)
    BO              reduce using rule 11 (stmt -> print_stmt .)
    PRINT           reduce using rule 11 (stmt -> print_stmt .)
    ID              reduce using rule 11 (stmt -> print_stmt .)
    $end            reduce using rule 11 (stmt -> print_stmt .)
    BC              reduce using rule 11 (stmt -> print_stmt .)
    ELSE            reduce using rule 11 (stmt -> print_stmt .)


state 14

    (12) stmt -> assignment .

    IF              reduce using rule 12 (stmt -> assignment .)
    WHILE           reduce using rule 12 (stmt -> assignment .)
    BO              reduce using rule 12 (stmt -> assignment .)
    PRINT           reduce using rule 12 (stmt -> assignment .)
    ID              reduce using rule 12 (stmt -> assignment .)
    $end            reduce using rule 12 (stmt -> assignment .)
    BC              reduce using rule 12 (stmt -> assignment .)
    ELSE            reduce using rule 12 (stmt -> assignment .)


state 15

    (13) if_stmt -> IF . RO exp RC stmt else_stmt

    RO              shift and go to state 26


state 16

    (16) while_stmt -> WHILE . RO exp RC stmt

    RO              shift and go to state 27


state 17

    (18) block_stmt -> BO . stmt_list BC
    (6) stmt_list -> . stmt stmt_list
    (7) stmt_list -> . stmt
    (8) stmt -> . if_stmt
    (9) stmt -> . while_stmt
    (10) stmt -> . block_stmt
    (11) stmt -> . print_stmt
    (12) stmt -> . assignment
    (13) if_stmt -> . IF RO exp RC stmt else_stmt
    (16) while_stmt -> . WHILE RO exp RC stmt
    (18) block_stmt -> . BO stmt_list BC
    (17) print_stmt -> . PRINT exp S
    (19) assignment -> . id EQ exp S
    (30) id -> . ID
    (31) id -> . ID id_array

    IF              shift and go to state 15
    WHILE           shift and go to state 16
    BO              shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 20

    stmt_list                      shift and go to state 28
    stmt                           shift and go to state 9
    if_stmt                        shift and go to state 10
    while_stmt                     shift and go to state 11
    block_stmt                     shift and go to state 12
    print_stmt                     shift and go to state 13
    assignment                     shift and go to state 14
    id                             shift and go to state 19

state 18

    (17) print_stmt -> PRINT . exp S
    (32) exp -> . RO exp RC
    (33) exp -> . condition
    (34) exp -> . arigmethic
    (35) exp -> . number_id
    (36) exp -> . unumber_id
    (37) condition -> . NOT exp
    (38) condition -> . exp OR exp
    (39) condition -> . exp AND exp
    (40) condition -> . exp MIN exp
    (41) condition -> . exp MAJ exp
    (42) condition -> . exp EQ EQ exp
    (43) condition -> . exp MAJ_EQ exp
    (44) condition -> . exp MIN_EQ exp
    (45) arigmethic -> . exp PLUS exp
    (46) arigmethic -> . exp MINUS exp
    (47) arigmethic -> . exp STAR exp
    (48) arigmethic -> . exp DIV exp
    (49) number_id -> . id
    (50) number_id -> . INT
    (51) number_id -> . DOUBLE
    (52) unumber_id -> . UMINUS
    (53) unumber_id -> . exp UMINUS
    (54) unumber_id -> . MINUS exp
    (30) id -> . ID
    (31) id -> . ID id_array

    RO              shift and go to state 30
    NOT             shift and go to state 35
    INT             shift and go to state 38
    DOUBLE          shift and go to state 39
    UMINUS          shift and go to state 40
    MINUS           shift and go to state 36
    ID              shift and go to state 20

    exp                            shift and go to state 29
    condition                      shift and go to state 31
    arigmethic                     shift and go to state 32
    number_id                      shift and go to state 33
    unumber_id                     shift and go to state 34
    id                             shift and go to state 37

state 19

    (19) assignment -> id . EQ exp S

    EQ              shift and go to state 41


state 20

    (30) id -> ID .
    (31) id -> ID . id_array
    (27) id_array -> . SO INT SC id_array
    (28) id_array -> . SO id SC id_array
    (29) id_array -> . empty
    (4) empty -> .

  ! reduce/reduce conflict for EQ resolved using rule 4 (empty -> .)
  ! reduce/reduce conflict for S resolved using rule 4 (empty -> .)
  ! reduce/reduce conflict for OR resolved using rule 4 (empty -> .)
  ! reduce/reduce conflict for AND resolved using rule 4 (empty -> .)
  ! reduce/reduce conflict for MIN resolved using rule 4 (empty -> .)
  ! reduce/reduce conflict for MAJ resolved using rule 4 (empty -> .)
  ! reduce/reduce conflict for MAJ_EQ resolved using rule 4 (empty -> .)
  ! reduce/reduce conflict for MIN_EQ resolved using rule 4 (empty -> .)
  ! reduce/reduce conflict for PLUS resolved using rule 4 (empty -> .)
  ! reduce/reduce conflict for MINUS resolved using rule 4 (empty -> .)
  ! reduce/reduce conflict for STAR resolved using rule 4 (empty -> .)
  ! reduce/reduce conflict for DIV resolved using rule 4 (empty -> .)
  ! reduce/reduce conflict for UMINUS resolved using rule 4 (empty -> .)
  ! reduce/reduce conflict for RC resolved using rule 4 (empty -> .)
  ! reduce/reduce conflict for SC resolved using rule 4 (empty -> .)
    SO              shift and go to state 43
    EQ              reduce using rule 4 (empty -> .)
    S               reduce using rule 4 (empty -> .)
    OR              reduce using rule 4 (empty -> .)
    AND             reduce using rule 4 (empty -> .)
    MIN             reduce using rule 4 (empty -> .)
    MAJ             reduce using rule 4 (empty -> .)
    MAJ_EQ          reduce using rule 4 (empty -> .)
    MIN_EQ          reduce using rule 4 (empty -> .)
    PLUS            reduce using rule 4 (empty -> .)
    MINUS           reduce using rule 4 (empty -> .)
    STAR            reduce using rule 4 (empty -> .)
    DIV             reduce using rule 4 (empty -> .)
    UMINUS          reduce using rule 4 (empty -> .)
    RC              reduce using rule 4 (empty -> .)
    SC              reduce using rule 4 (empty -> .)

  ! EQ              [ reduce using rule 30 (id -> ID .) ]
  ! S               [ reduce using rule 30 (id -> ID .) ]
  ! OR              [ reduce using rule 30 (id -> ID .) ]
  ! AND             [ reduce using rule 30 (id -> ID .) ]
  ! MIN             [ reduce using rule 30 (id -> ID .) ]
  ! MAJ             [ reduce using rule 30 (id -> ID .) ]
  ! MAJ_EQ          [ reduce using rule 30 (id -> ID .) ]
  ! MIN_EQ          [ reduce using rule 30 (id -> ID .) ]
  ! PLUS            [ reduce using rule 30 (id -> ID .) ]
  ! MINUS           [ reduce using rule 30 (id -> ID .) ]
  ! STAR            [ reduce using rule 30 (id -> ID .) ]
  ! DIV             [ reduce using rule 30 (id -> ID .) ]
  ! UMINUS          [ reduce using rule 30 (id -> ID .) ]
  ! RC              [ reduce using rule 30 (id -> ID .) ]
  ! SC              [ reduce using rule 30 (id -> ID .) ]

    id_array                       shift and go to state 42
    empty                          shift and go to state 44

state 21

    (3) decl_list -> decl decl_list .

    IF              reduce using rule 3 (decl_list -> decl decl_list .)
    WHILE           reduce using rule 3 (decl_list -> decl decl_list .)
    BO              reduce using rule 3 (decl_list -> decl decl_list .)
    PRINT           reduce using rule 3 (decl_list -> decl decl_list .)
    ID              reduce using rule 3 (decl_list -> decl decl_list .)


state 22

    (5) decl -> type var_list . S

    S               shift and go to state 45


state 23

    (22) var_list -> var .
    (23) var_list -> var . CM var_list

    S               reduce using rule 22 (var_list -> var .)
    CM              shift and go to state 46


state 24

    (24) var -> ID . array
    (25) array -> . empty
    (26) array -> . SO INT SC array
    (4) empty -> .

    SO              shift and go to state 49
    CM              reduce using rule 4 (empty -> .)
    S               reduce using rule 4 (empty -> .)

    array                          shift and go to state 47
    empty                          shift and go to state 48

state 25

    (6) stmt_list -> stmt stmt_list .

    $end            reduce using rule 6 (stmt_list -> stmt stmt_list .)
    BC              reduce using rule 6 (stmt_list -> stmt stmt_list .)


state 26

    (13) if_stmt -> IF RO . exp RC stmt else_stmt
    (32) exp -> . RO exp RC
    (33) exp -> . condition
    (34) exp -> . arigmethic
    (35) exp -> . number_id
    (36) exp -> . unumber_id
    (37) condition -> . NOT exp
    (38) condition -> . exp OR exp
    (39) condition -> . exp AND exp
    (40) condition -> . exp MIN exp
    (41) condition -> . exp MAJ exp
    (42) condition -> . exp EQ EQ exp
    (43) condition -> . exp MAJ_EQ exp
    (44) condition -> . exp MIN_EQ exp
    (45) arigmethic -> . exp PLUS exp
    (46) arigmethic -> . exp MINUS exp
    (47) arigmethic -> . exp STAR exp
    (48) arigmethic -> . exp DIV exp
    (49) number_id -> . id
    (50) number_id -> . INT
    (51) number_id -> . DOUBLE
    (52) unumber_id -> . UMINUS
    (53) unumber_id -> . exp UMINUS
    (54) unumber_id -> . MINUS exp
    (30) id -> . ID
    (31) id -> . ID id_array

    RO              shift and go to state 30
    NOT             shift and go to state 35
    INT             shift and go to state 38
    DOUBLE          shift and go to state 39
    UMINUS          shift and go to state 40
    MINUS           shift and go to state 36
    ID              shift and go to state 20

    exp                            shift and go to state 50
    condition                      shift and go to state 31
    arigmethic                     shift and go to state 32
    number_id                      shift and go to state 33
    unumber_id                     shift and go to state 34
    id                             shift and go to state 37

state 27

    (16) while_stmt -> WHILE RO . exp RC stmt
    (32) exp -> . RO exp RC
    (33) exp -> . condition
    (34) exp -> . arigmethic
    (35) exp -> . number_id
    (36) exp -> . unumber_id
    (37) condition -> . NOT exp
    (38) condition -> . exp OR exp
    (39) condition -> . exp AND exp
    (40) condition -> . exp MIN exp
    (41) condition -> . exp MAJ exp
    (42) condition -> . exp EQ EQ exp
    (43) condition -> . exp MAJ_EQ exp
    (44) condition -> . exp MIN_EQ exp
    (45) arigmethic -> . exp PLUS exp
    (46) arigmethic -> . exp MINUS exp
    (47) arigmethic -> . exp STAR exp
    (48) arigmethic -> . exp DIV exp
    (49) number_id -> . id
    (50) number_id -> . INT
    (51) number_id -> . DOUBLE
    (52) unumber_id -> . UMINUS
    (53) unumber_id -> . exp UMINUS
    (54) unumber_id -> . MINUS exp
    (30) id -> . ID
    (31) id -> . ID id_array
